# extractflow-parser

./: .env  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
examples/: azure_llama_vision_openai_compatible_demo.ipynb  gemini_demo.ipynb  ollama_demo.ipynb  openai_demo.ipynb  qwen2-vl_openai_compatible_demo.ipynb
src/extractflow_parser/: __init__.py  exceptions.py  llm.py  parser.py
tests/: conftest.py  test_llm.py  test_parser.py
